ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi-ingress 
spec:
  rules:
    - host: api.evazquez.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapi-service  
                port:
                  number: 8080
